--- a/src/6FigureDev_Example/package.json
+++ b/src/6FigureDev_Example/package.json
@@ -1,11 +1,23 @@
 {
   "name": "ASP.NET",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "scripts": {
+    "test": "karma start"
+  },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
-    "rimraf": "2.2.8"
+    "karma": "^0.13.21",
+    "karma-browserify": "^5.0.2",
+    "karma-mocha": "^0.2.2",
+    "mocha": "^2.4.5",
+    "rimraf": "2.2.8",
+    "watchify": "^3.7.0"
   }
 }
